documented html generation method

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 <div id="game"></div>
 
 <script>
+    /**
+     * This is just a fiction!
+     * this piece of code is used to write the repeated html structure of the game
+     * the output will look like:
+     *
+     * <input type="checkbox" class="cube cube_0 level_0">
+     * <input type="checkbox" class="cube cube_1 level_0">
+     * <input type="checkbox" class="cube cube_2 level_0">
+     * <input type="checkbox" class="cube cube_3 level_0">
+     * <input type="checkbox" class="cube cube_0 level_1">
+     * <input type="checkbox" class="cube cube_1 level_1">......
+     */
     var inputs = '';
     for (var i = 0; i <= 10; i++) {
         for (var n = 0; n < (i + 2) * (i + 2); n++) {
